# django-bldtool

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  pylintrc  reqirements.txt  setup.cfg  setup.py
bldtool/config/: coveragerc  pylintrc
bldtool/management/commands/: coverage.py  doc.py  lint.py
bldtool/templates/bldtool/: sphinx_conf.py  sphinx_developer.rst
bldtool/tests/: test_commands.py
demo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
demo/migrations/: 0001_initial.py
demo/react/: package-lock.json  package.json  tsconfig.json  webpack.config.js
demo/react/src/: index.tsx
demo/react/src/components/: App.tsx
demo/static/demo/: main.js
demo/templates/demo/: index.html
demo_react/: admin.py  apps.py  package-lock.json  package.json  views.py
demo_react/src/components/: App.js
demo_react/static/demo_react/: main.js
demo_react/templates/demo_react/: index.html
doc-developer/: .gitignore
doc-user/: conf.py  index.rst
react_rest_django/: asgi.py  settings.py  urls.py  wsgi.py
react_rest_django/management/commands/: coverage.py  lint.py  qc.py
react_rest_django/tests/: test_commands.py
