[metadata]
name = django-bldtool
version = 0.0.1
long_description = file: README.rst
url = 
author = Stefan Koch
author_email = stefan.koch.micro@gmail.com
license = MIT Licence
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = bldtool, bldtool.management, bldtool.management.commands

